--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,12 @@
 :root {
+  --backgrond-primary-color: #ffffff;
+  --backgrond-secondary-color: #f5f5f5;
+  --backgrond-tertiary-color: #0000;
+  --butoon-primary-color: #8f0101;
+  --butoon-secondary-color: #b81515;
+  --text-primary-color: #222222;
+  --text-secondary-color: #ffffff;
+  /* --text-tertiary-color: #d9d9d9; */
 }
 
 * {
