--- a/style/style.css
+++ b/style/style.css
@@ -1,12 +1,21 @@
+@font-face {
+  font-family: "Montserrat";
+  src: url(../fonts/Montserrat-Regular.ttf);
+  font-style: normal;
+  font-display: swap;
+}
+
 :root {
+  --primary-color: #8f0101;
+  --secondary-color: #b81515;
   --backgrond-primary-color: #ffffff;
   --backgrond-secondary-color: #f5f5f5;
   --backgrond-tertiary-color: #0000;
-  --butoon-primary-color: #8f0101;
-  --butoon-secondary-color: #b81515;
   --text-primary-color: #222222;
   --text-secondary-color: #ffffff;
-  /* --text-tertiary-color: #d9d9d9; */
+  --title-weight: 700;
+  --text-weight: 400;
+  -menu-text-weight: 500;
 }
 
 * {
