--- a/style/style.css
+++ b/style/style.css
@@ -1,25 +1,2 @@
-@font-face {
-  font-family: "Montserrat";
-  src: url(../fonts/Montserrat-Regular.ttf);
-  font-style: normal;
-  font-display: swap;
-}
-
-:root {
-  --primary-color: #8f0101;
-  --secondary-color: #b81515;
-  --backgrond-primary-color: #ffffff;
-  --backgrond-secondary-color: #f5f5f5;
-  --backgrond-tertiary-color: #0000;
-  --text-primary-color: #222222;
-  --text-secondary-color: #ffffff;
-  --title-weight: 700;
-  --text-weight: 400;
-  -menu-text-weight: 500;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
+@import url(global.css);
+@import url(header.css);
